Fix for long BBCode elements stretching PM view that I don't quite understand.

--- a/ISS/static-src/src/private-messages/private-messages.less
+++ b/ISS/static-src/src/private-messages/private-messages.less
@@ -46,6 +46,7 @@
 
     .content-pane {
       flex: 1;
+      width: 0;
 
       .private-message-list {
         .index-table();
